tests/snapshots/html__single_element.html.snap
---
source: tests/cases_tests.rs
input_file: tests/cases/html/single_element.html
---
Node {
    children: [],
    node_type: Element(
        Element {
            tag_name: "div",
            atributes: {},
        },
    ),
}
